# sendxmpp-py

./: README.md  sendxmpp  sendxmpp.cfg  sendxmpp.py  setup.cfg
