[metadata]
name = sendxmpp
version = 1.0
description = sendxmpp rewritten in python
long_description = file: README.md
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3

[options]
packages = find:
scripts =
	sendxmpp
install_requires =
	dnspython
	slixmpp
